--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>DB2.io internship</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Description">
+  <meta name="description" content="DB2 Limited Internship">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
 </head>
@@ -19,7 +19,18 @@
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+
+  <!-- Plugin for search -->
   <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
+
+  <!-- Plugin for emoji support -->
   <script src="//unpkg.com/docsify/lib/plugins/emoji.min.js"></script>
+
+  <!-- Plugin for "COPY" button in each code block -->
+  <script src="//unpkg.com/docsify-copy-code"></script>
+
+  <!-- Plugin for syntax highlight(BASH only) -->
+  <script src="//unpkg.com/prismjs/components/prism-bash.min.js"></script>
+
 </body>
 </html>
