add links to first homework

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       name: 'Internship',
       repo: '',
       loadSidebar: true,
-      subMaxLevel: 3
+      subMaxLevel: 3,
+      themeColor: '#61D9A7'
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
