update 3rd lecture, add info about npm and yarn

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
   <!-- Plugin for "COPY" button in each code block -->
   <script src="//unpkg.com/docsify-copy-code"></script>
 
-  <!-- Plugin for syntax highlight(BASH only) -->
+  <!-- Plugin for syntax highlight(BASH and JSON only) -->
   <script src="//unpkg.com/prismjs/components/prism-bash.min.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-json.min.js"></script>
 
 </body>
 </html>
