--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
   <!-- Plugin for "COPY" button in each code block -->
   <script src="//unpkg.com/docsify-copy-code"></script>
 
-  <!-- Plugin for syntax highlight(BASH,JSON,SASS) -->
+  <!-- Plugin for syntax highlight(BASH, JSON, SASS, SQL) -->
   <script src="//unpkg.com/prismjs/components/prism-bash.min.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-json.min.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-sass.min.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-sql.min.js"></script>
 
 </body>
 </html>
