add content lecture 17

--- a/index.html
+++ b/index.html
@@ -36,5 +36,8 @@
   <script src="//unpkg.com/prismjs/components/prism-sass.min.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-sql.min.js"></script>
 
+  <!-- Plugin for custom alerts -->
+  <script src="//unpkg.com/docsify-plugin-flexible-alerts"></script>
+
 </body>
 </html>
