--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
   <!-- Plugin for "COPY" button in each code block -->
   <script src="//unpkg.com/docsify-copy-code"></script>
 
-  <!-- Plugin for syntax highlight(BASH, JSON, SASS, SQL) -->
+  <!-- Plugin for syntax highlight(BASH, JSON, SASS, SQL, YAML) -->
   <script src="//unpkg.com/prismjs/components/prism-bash.min.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-json.min.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-sass.min.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-sql.min.js"></script>
+  <script src="//unpkg.com/prismjs/components/prism-yaml.min.js"></script>
 
   <!-- Plugin for custom alerts -->
   <script src="//unpkg.com/docsify-plugin-flexible-alerts"></script>
